[package]
name = "gsone-gql"
version = "0.1.0"
authors = ["rausahanraja <vraushanraja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.4.0"
diesel = { version="1.4.6", features =["postgres","r2d2","chrono"] }
chrono = {version="0.4.19", features=["clock", "std"]}
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.14"
juniper = "0.15.4"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
r2d2 = "0.8.9"
lazy_static = "1.4"
